# compvision

./: .gitignore  .nojekyll  Optimization_methods.html  _quarto.yml  about.html  about.qmd  index.html  index.qmd  lab1.html  lab1.qmd  lab10.html  lab10.qmd  lab11.html  lab11.qmd  lab2.html  lab2.qmd  lab3.html  lab3.qmd  lab4.html  lab4.qmd  lab4_1.html  lab5.html  lab5.qmd  lab6.html  lab6.qmd  lab6_bak.html  lab6_bak.qmd  lab7.html  lab7.qmd  lab8.html  lab8.qmd  lab9.html  lab9.qmd  lec1-speaker.html  lec1.html  lec1.qmd  lec10.html  lec10.qmd  lec2-speaker.html  lec2.html  (+23 more)
dl_lab5/: Optimization_methods.html
nb/: Untitled.html
nb/cv24_pset1/: pset1_2024.html
nb/dl_lab1/: Logistic_Regression_with_a_Neural_Network_mindset.html
nb/dl_lab4_answers/: Optimization_methods.html
nb/lab9/: Exercises.html  Overview.html
nb/pset2_2024/: pset2_2024.html
